@@ -1,25 +1,28 @@
-package com.example.tachoproject.comtrollers;
+package com.example.tachoproject.controllers;
 
 import com.example.tachoproject.domains.Ingredient;
+import com.example.tachoproject.domains.Ingredient.Type.*;
 import com.example.tachoproject.domains.Taco;
 import com.example.tachoproject.domains.TacoOrder;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 
 @Slf4j
 @Controller
-@SessionAttributes("tacoOrder")
 @RequestMapping("/design")
+@SessionAttributes("tacoOrder")
 public class DesignController {
 
     @ModelAttribute
-    public void addIngredientsToModel(Model model){
-        List<Ingredient> ingredients = List.of(
+    public void addIngredientsToModel(Model model) {
+        List<Ingredient> ingredients = Arrays.asList(
                 new Ingredient("FLTO", "Flour Tortilla", Ingredient.Type.WRAP),
                 new Ingredient("COTO", "Corn Tortilla", Ingredient.Type.WRAP),
                 new Ingredient("GRBF", "Ground Beef", Ingredient.Type.PROTEIN),
@@ -31,36 +34,40 @@ public class DesignController {
                 new Ingredient("SLSA", "Salsa", Ingredient.Type.SAUCE),
                 new Ingredient("SRCR", "Sour Cream", Ingredient.Type.SAUCE)
         );
-
-
         Ingredient.Type[] types = Ingredient.Type.values();
         for (Ingredient.Type type : types) {
             model.addAttribute(type.toString().toLowerCase(),
+
                     filterByType(ingredients, type));
         }
     }
-
-    private Iterable<Ingredient> filterByType(List<Ingredient> ingredients, Ingredient.Type type) {
+    @ModelAttribute(name = "tacoOrder")
+    public TacoOrder order() {
+        return new TacoOrder();
+    }
+    @ModelAttribute(name = "taco")
+    public Taco taco() {
+        return new Taco();
+    }
+    @GetMapping
+    public String showDesignForm() {
+        return "design";
+    }
+    private Iterable<Ingredient> filterByType(
+            List<Ingredient> ingredients, Ingredient.Type type) {
         return ingredients
                 .stream()
-                .filter( x-> x.getType().equals(type))
+                .filter(x -> x.getType().equals(type))
                 .collect(Collectors.toList());
     }
 
-    @ModelAttribute(name = "tacoOrder")
-    public TacoOrder order(){
-        return new TacoOrder();
-    }
 
+    @PostMapping
+    public String processTaco (Taco taco, @ModelAttribute TacoOrder tacoOrder){
+        tacoOrder.addTaco(taco);
+        log.info("Processing Tacho :  {} ;", taco);
 
-    @ModelAttribute(name = "taco")
-    public Taco taco(){
-        return new Taco();
-    }
-
-    @GetMapping
-    public String showDesignForm(){
-        return "design";
+        return "redirect:/orders/current";
     }
 
 
